# bazed

./: Cargo.toml
crates/bazed-core/: Cargo.toml
crates/bazed-core/src/: app.rs  buffer.rs  fake_plugin.rs  fake_stew.rs  lib.rs
crates/bazed-event-system/: Cargo.toml
crates/bazed-event-system/src/: lib.rs
crates/bazed-input-mapper/: Cargo.toml
crates/bazed-input-mapper/src/: lib.rs
crates/bazed-rpc/src/: server.rs
crates/bazed/src/: main.rs
rekuho/: package.json
rekuho/src/lib/: Core.ts  Cursors.svelte  LinesView.svelte  Portion.svelte  Rekuho.svelte  Rpc.ts  Theme.ts
