[package]
name = "bazed-event-system"
version = "0.0.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
derive_more.workspace = true
tap.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
