[package]
name = "bazed-event-system"
version = "0.0.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
